--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/pictures/favicon.ico" />
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Adaopte: rencontrez les animaux les plus choupis de votre région"
+    />
     <title>adaopte</title>
   </head>
   <body>
